# NanoNet

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: graph.h  nodes.h  onnx_loader.h  ops.h  tensor.h  thread_pool.h
mnist_scripts/: export.py  train.py
scripts/: dump_test_data.py  export_onnx.py
src/: matmul.cpp  onnx_loader.cpp  ops.cpp  tensor.cpp  thread_pool.cpp
tests/: test_mnist.cpp
